--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "^2.4.1",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
